# karpathy-gpt2

./: .gitignore
gpt2-poc/: Cargo.toml  README.md
gpt2-poc/src/: config.rs  dataset.rs  infer.rs  lib.rs  main.rs  model.rs  stream_dataset.rs  token_batcher.rs  train.rs  train_stats.rs  utils.rs
gpt2-poc/src/diag/: ascii_plot.rs  bpb.rs  mod.rs  scaling_predictor.rs  token_entropy.rs
gpt2-poc/src/eval/: arc_easy.rs  hellaswag.rs  mod.rs  piqa.rs
