[package]
name = "gpt2-poc"
version = "0.1.0"
edition = "2024"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]

[dependencies]
anyhow = "1.0.97"
candle-core = { version = "0.9.2" }
candle-nn = { version = "0.9.2" }
clap = { version = "4.5.32", features = ["derive"] }
indicatif = "0.17.11"
memmap2 = "0.9.5"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
