[package]
name = "gpt2-poc"
version = "0.1.0"
edition = "2024"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]

[dependencies]
anyhow = "1.0.97"
candle-core = { version = "0.9.2" }
candle-nn = { version = "0.9.2" }
clap = { version = "4.5.32", features = ["derive"] }
crossbeam-channel = "0.5"
futures = "0.3"
indicatif = "0.17.11"
memmap2 = "0.9.5"
num_cpus = "1.16"
polars = { version = "0.38", features = ["parquet", "lazy"] }
rand = "0.8"
rayon = "1.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokenizers = { version = "0.15", features = ["http"] }
